<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="lbl_amount">Amount</string>
	<string name="lbl_tip">Tip</string>
	<string name="lbl_choose_tip">Choose Tip %</string>
	<string name="total_default">$0.00</string>
	<string name="amount_default">0</string>
	<string name="lbl_total">Total</string>
</resources>
